reorganized file structure and added security
created the jwt authentication middleware to verify token for the
protected endpoints and reorganized the file structure of the code for
clarity, created more queries for creating the other enities and one to
verify then. created more code to parse the models to db models.
